--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 
 
-    <img id="img-div" src="./images/image-product-desktop.jpg">
-    <img class="img-mobile"./images/image-product-mobile.jpg">    
+    <img id="img-div" src="/product-preview-card-component-main/images/image-product-desktop.jpg">
+    <img class="img-mobile"/product-preview-card-component-main/images/image-product-mobile.jpg">    
   
 </main>
   
