--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 
 
-    <img id="img-div" src="./images/image-product-desktop.jpg">
+    <img id="img-div" src="./images/image-product-desktop.jpg" alt="photo of perfume">
 
-    <img class="img-mobile" src="./images/image-product-mobile.jpg">    
+    <img class="img-mobile" src="./images/image-product-mobile.jpg" alt="photo of perfume">    
 
   
 </main>
